<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        android:id="@+id/mainRecentCard1"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        android:onClick="openListingActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!-- Media -->
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/car1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/main_most_recent_card_photo_des"
                android:id="@+id/car_card_image"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_most_recent_card_title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="15sp" android:id="@+id/car_card_title" android:fontFamily="@font/poppins_bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_most_recent_card_subtitle"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="13sp" android:id="@+id/car_card_subtitle" android:fontFamily="@font/poppins"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_most_recent_card_price"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:id="@+id/car_card_price" android:textSize="12sp" android:fontFamily="@font/poppins_bold"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>