<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchResultPlaceholder"
    android:layout_width="150dp"
    android:layout_height="225dp"
    android:layout_marginRight="50dp"
    android:layout_marginBottom="8dp"
    android:visibility="visible"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:layout_rowWeight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/search_result_card_1_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/main_most_recent_card_photo_des"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/car1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/search_result_card_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title N Car"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/search_result_card_1_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_most_recent_card_subtitle"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/search_result_card_1_recent_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/main_most_recent_card_price"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/search_result_card_1_car_owner_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="3dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/main_owner_img" />

                <TextView
                    android:id="@+id/search_result_card_1_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/main_most_recent_card_owner"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

