<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyProfileActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile_top"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="left"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="60dp"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp">

        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageButton
                        android:layout_width="108dp"
                        android:layout_height="108dp" android:id="@+id/othersProfileIcon"
                        android:src="@drawable/unknown_person"
                        android:background="@color/transparent"
                        android:scaleType="centerCrop"
                        android:layout_marginEnd="8dp"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:gravity="center|left">
                    <TextView
                            android:text="Derek"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/othersProfileUsrName"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"/>
                    <TextView
                            android:text="@string/my_profile_user_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/othersProfileID"
                            android:textSize="14sp" android:textColor="#AFAFAF"/>
                </LinearLayout>
            </LinearLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1">
                    <TextView
                            android:text="@string/my_profile_list_number"
                            android:layout_width="108dp"
                            android:layout_height="wrap_content" android:id="@+id/othersProfileListNo"
                            android:layout_weight="1"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"/>
                    <TextView
                            android:text="@string/my_profile_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/othersProfileList"
                            android:layout_weight="1"
                            android:gravity="center" android:textColor="#FFFFFF" android:textSize="14sp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <ImageView
                                android:src="@drawable/profile_star_empty"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:id="@+id/othersProfileStar1"/>
                        <ImageView
                                android:src="@drawable/profile_star_empty"
                                android:layout_width="20dp"
                                android:layout_height="20dp" android:id="@+id/othersProfileStar2"
                                android:layout_marginStart="4dp"/>
                        <ImageView
                                android:src="@drawable/profile_star_empty"
                                android:layout_width="20dp"
                                android:layout_height="20dp" android:id="@+id/othersProfileStar3"
                                android:layout_marginStart="4dp"/>
                        <ImageView
                                android:src="@drawable/profile_star_empty"
                                android:layout_width="20dp"
                                android:layout_height="20dp" android:id="@+id/othersProfileStar4"
                                android:layout_marginStart="4dp"/>
                        <ImageView
                                android:src="@drawable/profile_star_empty"
                                android:layout_width="20dp"
                                android:layout_height="20dp" android:id="@+id/othersProfileStar5"
                                android:layout_marginStart="4dp" android:layout_weight="1"/>
                        <TextView
                                android:text="@string/my_profile_rate_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/othersProfileRateNo"
                                android:layout_marginLeft="4dp" android:textSize="14sp" android:textColor="#FFFFFF"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="@string/my_profile_join_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/othersProfileJoinDate"
                                android:layout_marginLeft="4dp"
                                android:textColor="#FFFFFF"
                                android:layout_marginTop="8dp"
                                android:textSize="10sp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/othersProfileTabs">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/othersProfileViewPager"
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/othersProfileTabs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>